fix:修复呗删除的路由noteQuestion
